fix broken link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 			</div>
 			<nav style="list-style-type: none;">
 					<li><a href="/">Home</a></li>
-	        			<li><a href="/oscp">OSCP</a></li>
+	        			<li><a href="/resources">Resources</a></li>
 			</nav>
 			<div class="header-column"></div>
 			<div class="header-column"></div>
