Added links on main page for osint

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
 			<nav style="list-style-type: none;">
 					<li><a href="/">Home</a></li>
 	        			<li><a href="/resources">Resources</a></li>
+                                        <li><a href="/osint">OSINT</a></li>
 			</nav>
 			<div class="header-column"></div>
 			<div class="header-column"></div>
@@ -24,7 +25,8 @@
                 <footer>
                 	<ul>
                         	<li><a href="mailto:mcorybillington@gmail.com">email</a></li>
-                        	<li><a href="https://github.com/mcorybillington">github.com/mcorybillington</a></li>
+                        	<li><a href="https://github.com/mcorybillington">github</a></li>
+                                <li><a href="https://twitter.com/_th3y">twitter</a></li>
                         </ul>
                 </footer>
         </body>
