Add resources link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,10 @@
 				{% avatar mcorybillington size=200 %}
 			</div>
 			<nav style="list-style-type: none;">
-					<li><a href="/">Home</a></li>
-	        			<li><a href="/resources">Resources</a></li>
-                                        <li><a href="/osint">OSINT</a></li>
+				<li><a href="/">Home</a></li>
+	        	<li><a href="/resources">Resources</a></li>
+				<li><a href="/osint">OSINT</a></li>
+				<li><a href="/research">Research</a></li>
 			</nav>
 			<div class="header-column"></div>
 			<div class="header-column"></div>
