--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
         <head>
                 <title>{{ page.title }}</title>
                 <link rel="stylesheet" type="text/css" href="/css/main.css">
+				<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
         </head>
         <body>
 		<div class="header-row">
