--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,10 @@
-
-html {
-background-color: '#2E2E2E';
-}
-
 body {
     margin: 60px auto;
     width: 70%;
+    background-color: #2e2e2e;
+    font-family:'Ubuntu';
 }
 nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
@@ -19,19 +15,16 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #999;
 }
 a:hover {
     text-decoration: underline;
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
     font-size: 1.5em;
     line-height: 1.4em;
-    color: #333;
 }
 footer {
     border-top: 1px solid #d5d5d5;
