--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
+    color: whitesmoke;
 }
 a:hover {
     text-decoration: underline;
