--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
 	        	<li><a href="/resources">Resources</a></li>
 				<li><a href="/osint">OSINT</a></li>
 				<li><a href="/research">Research</a></li>
+				<li><a href="/certifications">My Certs</a></li>
 			</nav>
 			<div class="header-column"></div>
 			<div class="header-column"></div>
