--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 				<li><a href="/">Home</a></li>
 	        	<li><a href="/resources">Resources</a></li>
 				<li><a href="/osint">OSINT</a></li>
-				<li><a href="/research">Research</a></li>
+				<li><a href="/research">Research/CVE</a></li>
 				<li><a href="/certifications">My Certs</a></li>
 			</nav>
 			<div class="header-column"></div>
