--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html>
-        <head>
-                <title>{{ page.title }}</title>
-                <link rel="stylesheet" type="text/css" href="/css/main.css">
-				<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
-        </head>
-        <body>
-		<div class="header-row">
-			<div class="header-column">
-				{% avatar mcorybillington size=200 %}
-			</div>
-			<nav style="list-style-type: none;">
-				<li><a href="/">Home</a></li>
-	        	<li><a href="/resources">Resources</a></li>
-				<li><a href="/osint">OSINT</a></li>
-				<li><a href="/research">Research/CVE's</a></li>
-				<li><a href="/certifications">My Certs</a></li>
-			</nav>
-			<div class="header-column"></div>
-			<div class="header-column"></div>
-			<div class="header-column"></div>
-			<div class="header-column"></div>
-          	</div>
-                <div class="container">
-                        {{ content }}
-                </div>
-                <footer>
-                	<ul>
-                        	<li><a href="mailto:mcorybillington@gmail.com">email</a></li>
-                        	<li><a href="https://github.com/mcorybillington">github</a></li>
-                                <li><a href="https://twitter.com/_th3y">twitter</a></li>
-                        </ul>
-                </footer>
-        </body>
+<head>
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu"/>
+</head>
+<body>
+<div class="header-row">
+    <div class="header-column">
+        {% avatar mcorybillington size=200 %}
+    </div>
+    <nav style="list-style-type: none; margin-left;">
+        <a href="/">Home</a>
+        <a href="/resources">Resources</a>
+        <a href="/osint">OSINT</a>
+        <a href="/research">Research/CVE's</a>
+        <a href="/certifications">My Certs</a>
+    </nav>
+    <div class="header-column"></div>
+    <div class="header-column"></div>
+    <div class="header-column"></div>
+    <div class="header-column"></div>
+</div>
+<div class="container">
+    {{ content }}
+</div>
+<footer>
+        <a href="mailto:mcorybillington@gmail.com">email</a>
+        <a href="https://github.com/mcorybillington">github</a>
+        <a href="https://twitter.com/_th3y">twitter</a>
+</footer>
+</body>
 </html>
 
