--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <div class="header-column">
         {% avatar mcorybillington size=200 %}
     </div>
-    <nav style="list-style-type: none; margin-left;">
+    <nav style="list-style-type: none;">
         <a href="/">Home</a>
         <a href="/resources">Resources</a>
         <a href="/osint">OSINT</a>
