Fix formatting error

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,13 @@
         {% avatar mcorybillington size=200 %}
     </div>
     <nav style="list-style-type: none;">
-        <a href="/">Home</a>
-        <a href="/resources">Resources</a>
-        <a href="/osint">OSINT</a>
-        <a href="/research">Research/CVE's</a>
-        <a href="/certifications">My Certs</a>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/resources">Resources</a></li>
+            <li><a href="/osint">OSINT</a></li>
+            <li><a href="/research">Research/CVE's</a></li>
+            <li><a href="/certifications">My Certs</a></li>
+        </ul>
     </nav>
     <div class="header-column"></div>
     <div class="header-column"></div>
@@ -26,9 +28,11 @@
     {{ content }}
 </div>
 <footer>
-        <a href="mailto:mcorybillington@gmail.com">email</a>
-        <a href="https://github.com/mcorybillington">github</a>
-        <a href="https://twitter.com/_th3y">twitter</a>
+    <ul>
+        <li><a href="mailto:mcorybillington@gmail.com">email</a></li>
+        <li><a href="https://github.com/mcorybillington">github</a></li>
+        <li><a href="https://twitter.com/_th3y">twitter</a></li>
+    </ul>
 </footer>
 </body>
 </html>
