Fix formatting error

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
             <li><a href="/resources">Resources</a></li>
             <li><a href="/osint">OSINT</a></li>
             <li><a href="/research">Research/CVE's</a></li>
-            <li><a href="/certifications">My Certs</a></li>
+            <li><a href="/certifications">Certifications</a></li>
         </ul>
     </nav>
     <div class="header-column"></div>
