--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,13 +11,11 @@
         {% avatar mcorybillington size=200 %}
     </div>
     <nav style="list-style-type: none;">
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/resources">Resources</a></li>
-            <li><a href="/osint">OSINT</a></li>
-            <li><a href="/research">Research/CVE's</a></li>
-            <li><a href="/certifications">Certifications</a></li>
-        </ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/resources">Resources</a></li>
+        <li><a href="/osint">OSINT</a></li>
+        <li><a href="/research">Research/CVE's</a></li>
+        <li><a href="/certifications">My Certs</a></li>
     </nav>
     <div class="header-column"></div>
     <div class="header-column"></div>
