--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
         <li><a href="mailto:mcorybillington@gmail.com">email</a></li>
         <li><a href="https://github.com/mcorybillington">github</a></li>
         <li><a href="https://twitter.com/_th3y">twitter</a></li>
+        <li><a href="https://app.hackthebox.eu/profile/130114">hackthebox</a></li>
     </ul>
 </footer>
 </body>
