--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,10 @@
 </div>
 <footer>
     <ul>
-        <li><a href="mailto:mcorybillington@gmail.com">email</a></li>
-        <li><a href="https://github.com/mcorybillington">github</a></li>
         <li><a href="https://twitter.com/_th3y">twitter</a></li>
+        <li><a href="https://github.com/mcorybillington">github</a></li>
         <li><a href="https://app.hackthebox.eu/profile/130114">hackthebox</a></li>
+        <li><a href="https://www.linkedin.com/in/mcorybillington/">linkedin</a></li>
     </ul>
 </footer>
 </body>
