--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
         <li><a href="/osint">OSINT</a></li>
         <li><a href="/research">Research/CVE's</a></li>
         <li><a href="/certifications">My Certs</a></li>
+        <li><a href="/blog.html">Writeups</a></li>
     </nav>
     <div class="header-column"></div>
     <div class="header-column"></div>
